--- a/image gallery.html
+++ b/image gallery.html
@@ -27,6 +27,8 @@
    </div>
    <div class="gallery-content">
          <img src="Assets/6.jpg">
+  <div class="gallery-content">
+         <img src="Assets/7.jpg">
    </div>
 </div>
 </body>
